fixing issues with profile page: - changed some containers to show correct info - made flowchart.js into a module to fix the issue with that (still won't work in production tho) - changed some css in upload.css to try and make flowchart visible in dev (kinda successful) - bro...

--- a/src/css/upload.css
+++ b/src/css/upload.css
@@ -62,15 +62,11 @@ li {
   margin-bottom: 20px;
 }
 
-#cy-container {
-  position: inherit;
-}
-
 #cy {
   width: 75%;
   max-width: 75%;
   height: 100%;
-  position: absolute;
+  position: relative;
   top: 75%;
   left: 25%;
 }
